infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: salkim
  labels:
    name: salkim
    environment: production
